--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 
 *.iml
 *.xml
-
+!pom.xml
 ## Directory-based project format:
 .idea/
 # if you remove the above rule, at least ignore the following:
