--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.jpa.hibernate.format_sql = true
 hibernate.ddl-auto=update
 hibernate.default_schema=FINANCIALS
 spring.jpa.generate-ddl=true
-server.port=9999
+#server.port=9999
 
 #CREATE TABLE BANKTRANSACTION
 #(
