--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,32 @@
       <artifactId>h2</artifactId>
       <version>${h2.version}</version>
     </dependency>
+
+    <!-- Javascript dependencies -->
+    <dependency>
+      <groupId>org.webjars</groupId>
+      <artifactId>angularjs</artifactId>
+      <version>1.3.8</version>
+      <scope>runtime</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.webjars</groupId>
+      <artifactId>jquery</artifactId>
+      <version>2.1.3</version>
+      <scope>runtime</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.webjars</groupId>
+      <artifactId>angular-ui-bootstrap</artifactId>
+      <version>0.12.0</version>
+      <scope>runtime</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.webjars</groupId>
+      <artifactId>bootstrap</artifactId>
+      <version>3.3.1</version>
+      <scope>runtime</scope>
+    </dependency>
   </dependencies>
 
   <build>
