h2 database file creation tests for h2 database file creation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,18 +4,18 @@
 
 # H2 DB
 jdbc.driverClassName = org.h2.Driver
-#jdbc.url = jdbc:h2:/DB/Financials
-#jdbc.url = jdbc:h2:./Financials;DATABASE_TO_UPPER=false
-jdbc.url = jdbc:h2:./Financials
-jdbc.username = root
-jdbc.password = root
+spring.datasource.url= jdbc:h2:./db/Financials;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.jdbc.username = sa
+spring.datasource.jdbc.password = root
 hibernate.dialect = org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.show_sql = true
-spring.jpa.hibernate.format_sql = true
+#spring.jpa.hibernate.show_sql = true
+#spring.jpa.hibernate.format_sql = true
+hibernate.show_sql = true
+hibernate.format_sql = true
 #hibernate.ddl-auto=create-drop
-hibernate.ddl-auto=update
-hibernate.default_schema=FINANCIALS
-spring.jpa.generate-ddl=true
+#hibernate.ddl-auto=update
+#hibernate.default_schema=FINANCIALS
+#spring.jpa.generate-ddl=true
 #server.port=9999
 
 #CREATE TABLE BANKTRANSACTION
