--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
     <joda.version>2.8.2</joda.version>
     <hibernate.version>4.3.10.Final</hibernate.version>
     <junit.version>4.4</junit.version>
-    <!--<testng.version>6.1.1</testng.version>-->
+    <testng.version>6.1.1</testng.version>
     <spring-data-jpa.version>1.9.0.RELEASE</spring-data-jpa.version>
     <h2.version>1.4.189</h2.version>
   </properties>
@@ -46,11 +46,11 @@
       <artifactId>joda-time</artifactId>
       <version>${joda.version}</version>
     </dependency>
-    <!--<dependency>-->
-      <!--<groupId>org.testng</groupId>-->
-      <!--<artifactId>testng</artifactId>-->
-      <!--<version>${testng.version}</version>-->
-    <!--</dependency>-->
+    <dependency>
+      <groupId>org.testng</groupId>
+      <artifactId>testng</artifactId>
+      <version>${testng.version}</version>
+    </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
