Database file commit and changes to application properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@
 # H2 DB
 jdbc.driverClassName = org.h2.Driver
 spring.datasource.url= jdbc:h2:./db/Financials;DB_CLOSE_ON_EXIT=FALSE
-spring.datasource.jdbc.username = sa
+spring.datasource.jdbc.username = root
 spring.datasource.jdbc.password = root
 hibernate.dialect = org.hibernate.dialect.H2Dialect
 #spring.jpa.hibernate.show_sql = true
@@ -16,7 +16,7 @@ hibernate.format_sql = true
 #hibernate.ddl-auto=update
 #hibernate.default_schema=FINANCIALS
 #spring.jpa.generate-ddl=true
-#server.port=9999
+server.port=9999
 
 #CREATE TABLE BANKTRANSACTION
 #(
