--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,11 @@
     </dependency>
     <dependency>
       <groupId>org.webjars</groupId>
+      <artifactId>smart-table</artifactId>
+      <version>2.1.3-1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.webjars</groupId>
       <artifactId>bootstrap</artifactId>
       <version>3.3.1</version>
       <scope>runtime</scope>
