--- a/pom.xml
+++ b/pom.xml
@@ -82,9 +82,9 @@
       <scope>runtime</scope>
     </dependency>
     <dependency>
-      <groupId>org.webjars</groupId>
-      <artifactId>smart-table</artifactId>
-      <version>2.1.3-1</version>
+      <groupId>org.webjars.npm</groupId>
+      <artifactId>angular-ui-grid</artifactId>
+      <version>3.0.6</version>
     </dependency>
     <dependency>
       <groupId>org.webjars</groupId>
