--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,8 @@
 #This is done for you automatically if you enable the debug mode.
 #debug=true
 
+transactions.directory=Users/macuser/IdeaProjects/tddtestingproject/input_files/
+
 # H2 DB
 jdbc.driverClassName = org.h2.Driver
 spring.datasource.url= jdbc:h2:./db/Financials;DB_CLOSE_ON_EXIT=FALSE
@@ -16,7 +18,7 @@ hibernate.format_sql = true
 #hibernate.ddl-auto=update
 #hibernate.default_schema=FINANCIALS
 #spring.jpa.generate-ddl=true
-server.port=9999
+#server.port=8080
 
 #CREATE TABLE BANKTRANSACTION
 #(
