Better structure for angular modules

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ hibernate.format_sql = true
 #hibernate.ddl-auto=update
 #hibernate.default_schema=FINANCIALS
 #spring.jpa.generate-ddl=true
-#server.port=8080
+server.port=9999
 
 #CREATE TABLE BANKTRANSACTION
 #(
