Change properties from H2 to derby

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,29 +2,9 @@
 #This is done for you automatically if you enable the debug mode.
 #debug=true
 
-transactions.directory=Users/macuser/IdeaProjects/tddtestingproject/input_files/
+#transactions.directory=Users/macuser/IdeaProjects/tddtestingproject/input_files/
+transactions.directory=C:\\Users\\fragkakise\\IdeaProjects\\TDDTestingProject\\input_files\\
 
-# H2 DB
-jdbc.driverClassName = org.h2.Driver
-spring.datasource.url= jdbc:h2:./db/Financials;DB_CLOSE_ON_EXIT=FALSE
-spring.datasource.jdbc.username = root
-spring.datasource.jdbc.password = root
-hibernate.dialect = org.hibernate.dialect.H2Dialect
-#spring.jpa.hibernate.show_sql = true
-#spring.jpa.hibernate.format_sql = true
-hibernate.show_sql = true
-hibernate.format_sql = true
-#hibernate.ddl-auto=create-drop
-#hibernate.ddl-auto=update
-#hibernate.default_schema=FINANCIALS
-#spring.jpa.generate-ddl=true
-server.port=9999
-
-#CREATE TABLE BANKTRANSACTION
-#(
-#    ID INTEGER AUTO_INCREMENT PRIMARY KEY NOT NULL,
-#    DATE DATE NOT NULL,
-#    DESCRIPTION VARCHAR(250) NOT NULL,
-#    COST DOUBLE NOT NULL
-#);
-
+spring.datasource.url=jdbc:derby:./db/Financials;create=true
+spring.datasource.driver-class-name=org.apache.derby.jdbc.EmbeddedDriver
+spring.jpa.hibernate.ddl-auto=create
