--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ transactions.directory=C:\\Users\\fragkakise\\IdeaProjects\\TDDTestingProject\\i
 spring.datasource.url=jdbc:derby:./db/Financials;create=true
 spring.datasource.driver-class-name=org.apache.derby.jdbc.EmbeddedDriver
 spring.jpa.hibernate.ddl-auto=create
+
+server.port=9999
