Monthly Statistics first attempt

--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,11 @@
       <version>${joda.version}</version>
     </dependency>
     <dependency>
+      <groupId>org.jadira.usertype</groupId>
+      <artifactId>usertype.core</artifactId>
+      <version>4.0.0.GA</version>
+    </dependency>
+    <dependency>
       <groupId>org.testng</groupId>
       <artifactId>testng</artifactId>
       <version>${testng.version}</version>
