--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,12 @@
       <artifactId>javax.inject</artifactId>
       <version>1</version>
     </dependency>
+    <dependency>
+      <groupId>org.webjars</groupId>
+      <artifactId>smart-table</artifactId>
+      <version>2.1.3-1</version>
+      <scope>runtime</scope>
+    </dependency>
   </dependencies>
 
   <build>
