--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
     <testng.version>6.1.1</testng.version>
     <spring-data-jpa.version>1.9.0.RELEASE</spring-data-jpa.version>
     <derby.version>10.11.1.1</derby.version>
+    <mockito.version>1.10.19</mockito.version>
   </properties>
 
   <dependencies>
@@ -66,6 +67,11 @@
       <artifactId>derby</artifactId>
       <version>${derby.version}</version>
       <scope>runtime</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-all</artifactId>
+      <version>${mockito.version}</version>
     </dependency>
     <!-- Javascript dependencies -->
     <dependency>
