--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 *.xml
 #*.db
 !pom.xml
+!Suite.xml
 ## Directory-based project format:
 .idea/
 # if you remove the above rule, at least ignore the following:
