--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #You can output the schema creation by enabling the org.hibernate.SQL logger.
 #This is done for you automatically if you enable the debug mode.
 #debug=true
-
+initial.balance = 12743.00
 transactions.directory=/Users/macuser/IdeaProjects/TDDtestingproject/statement_files/
 #transactions.directory=C:\\Users\\fragkakise\\IdeaProjects\\TDDTestingProject\\input_files\\
 
