Save transactions permanently to database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,6 @@ transactions.directory = input_files
 
 spring.datasource.url=jdbc:derby:./db/Financials;create=true
 spring.datasource.driver-class-name=org.apache.derby.jdbc.EmbeddedDriver
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 server.port=9999
