--- a/webApp/pom.xml
+++ b/webApp/pom.xml
@@ -128,11 +128,11 @@
             <version>2.1.3-1</version>
             <scope>runtime</scope>
         </dependency>
-        <dependency>
-            <groupId>com.github.wvengen</groupId>
-            <artifactId>proguard-maven-plugin</artifactId>
-            <version>2.0.11</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.github.wvengen</groupId>-->
+            <!--<artifactId>proguard-maven-plugin</artifactId>-->
+            <!--<version>2.0.11</version>-->
+        <!--</dependency>-->
     </dependencies>
 
     <profiles>
@@ -165,48 +165,48 @@
                             </execution>
                         </executions>
                     </plugin>
-                    <plugin>
-                        <groupId>com.github.wvengen</groupId>
-                        <artifactId>proguard-maven-plugin</artifactId>
-                        <version>2.0.11</version>
-                        <executions>
-                            <execution>
-                                <id>jar_obfuscation</id>
-                                <phase>package</phase>
-                                <goals>
-                                    <goal>proguard</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                        <configuration>
-                            <proguardVersion>5.2</proguardVersion>
-                            <obfuscate>true</obfuscate>
-                            <includeDependency>true</includeDependency>
-                            <injar>webApp-${project.version}.jar</injar>
-                            <outjar>${project.parent.artifactId}-webApp-${project.version}.jar</outjar>
-                            <outputDirectory>${project.build.directory}</outputDirectory>
-                            <maxMemory>256m</maxMemory>
-                            <libs>
-                                <lib>${java.home}/lib/rt.jar</lib>
-                                <lib>${java.home}/lib/jsse.jar</lib>
-                                <lib>${java.home}/lib/jce.jar</lib>
-                            </libs>
-                            <options>
-                                <option>-allowaccessmodification</option>
-                                <option>-dontskipnonpubliclibraryclasses</option>
-                                <option>-dontskipnonpubliclibraryclassmembers</option>
-                                <option>-dontshrink</option>
-                                <option>-dontoptimize</option>
-                                <option>-keepdirectories</option>
-                                <option>-verbose</option>
-                                <option>-renamesourcefileattribute SourceFile</option>
-                                <option>-keepattributes Exceptions,InnerClasses,Signature,Deprecated,SourceFile,LineNumberTable,*Annotation*,EnclosingMethod</option>
-                                <option>-keep class life.AppConfig {*;} </option>
-                                <option>-dontnote</option>
-                                <option>-dontwarn</option>
-                            </options>
-                        </configuration>
-                    </plugin>
+                    <!--<plugin>-->
+                        <!--<groupId>com.github.wvengen</groupId>-->
+                        <!--<artifactId>proguard-maven-plugin</artifactId>-->
+                        <!--<version>2.0.11</version>-->
+                        <!--<executions>-->
+                            <!--<execution>-->
+                                <!--<id>jar_obfuscation</id>-->
+                                <!--<phase>package</phase>-->
+                                <!--<goals>-->
+                                    <!--<goal>proguard</goal>-->
+                                <!--</goals>-->
+                            <!--</execution>-->
+                        <!--</executions>-->
+                        <!--<configuration>-->
+                            <!--<proguardVersion>5.2</proguardVersion>-->
+                            <!--<obfuscate>true</obfuscate>-->
+                            <!--<includeDependency>true</includeDependency>-->
+                            <!--<injar>webApp-${project.version}.jar</injar>-->
+                            <!--<outjar>${project.parent.artifactId}-webApp-${project.version}.jar</outjar>-->
+                            <!--<outputDirectory>${project.build.directory}</outputDirectory>-->
+                            <!--<maxMemory>256m</maxMemory>-->
+                            <!--<libs>-->
+                                <!--<lib>${java.home}/lib/rt.jar</lib>-->
+                                <!--<lib>${java.home}/lib/jsse.jar</lib>-->
+                                <!--<lib>${java.home}/lib/jce.jar</lib>-->
+                            <!--</libs>-->
+                            <!--<options>-->
+                                <!--<option>-allowaccessmodification</option>-->
+                                <!--<option>-dontskipnonpubliclibraryclasses</option>-->
+                                <!--<option>-dontskipnonpubliclibraryclassmembers</option>-->
+                                <!--<option>-dontshrink</option>-->
+                                <!--<option>-dontoptimize</option>-->
+                                <!--<option>-keepdirectories</option>-->
+                                <!--<option>-verbose</option>-->
+                                <!--<option>-renamesourcefileattribute SourceFile</option>-->
+                                <!--<option>-keepattributes Exceptions,InnerClasses,Signature,Deprecated,SourceFile,LineNumberTable,*Annotation*,EnclosingMethod</option>-->
+                                <!--<option>-keep class life.AppConfig {*;} </option>-->
+                                <!--<option>-dontnote</option>-->
+                                <!--<option>-dontwarn</option>-->
+                            <!--</options>-->
+                        <!--</configuration>-->
+                    <!--</plugin>-->
                 </plugins>
             </build>
 
