--- a/webApp/pom.xml
+++ b/webApp/pom.xml
@@ -12,6 +12,8 @@
 
     <version>1.0</version>
     <artifactId>webApp</artifactId>
+    <packaging>war</packaging>
+    <name>Life In Order</name>
 
     <properties>
         <joda.version>2.8.2</joda.version>
@@ -133,6 +135,11 @@
             <!--<artifactId>proguard-maven-plugin</artifactId>-->
             <!--<version>2.0.11</version>-->
         <!--</dependency>-->
+        <dependency>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-war-plugin</artifactId>
+            <version>2.6</version>
+        </dependency>
     </dependencies>
 
     <profiles>
@@ -207,6 +214,15 @@
                             <!--</options>-->
                         <!--</configuration>-->
                     <!--</plugin>-->
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-war-plugin</artifactId>
+                        <version>2.6</version>
+                        <configuration>
+                            <warSourceDirectory>src/main/webapp</warSourceDirectory>
+                            <failOnMissingWebXml>false</failOnMissingWebXml>
+                        </configuration>
+                    </plugin>
                 </plugins>
             </build>
 
