Set file size upload limits to the application properties.

--- a/webApp/src/main/resources/application.properties
+++ b/webApp/src/main/resources/application.properties
@@ -5,6 +5,15 @@ initial.balance = 00.00
 
 transactions.directory = input_files
 
+# specifies the directory where files will be stored. The default is "". A common value is to use the system's temporary directory, which can be obtained.
+#multipart.location = ;
+# specifies the maximum size permitted for uploaded files. The default is 1Mb.
+multipart.maxFileSize = 500Mb
+# specifies the maximum size allowed for multipart/form-data requests. The default is 10Mb
+multipart.maxRequestSize = 500Mb
+# specifies the size threshold after which files will be written to disk. Default is 0, which means that the file will be written to disk immediately.
+multipart.fileSizeThreshold = 500Mb
+
 spring.datasource.url=jdbc:derby:./db/Financials;create=true
 spring.datasource.driver-class-name=org.apache.derby.jdbc.EmbeddedDriver
 spring.jpa.hibernate.ddl-auto=update
