--- a/webApp/pom.xml
+++ b/webApp/pom.xml
@@ -12,7 +12,7 @@
 
     <version>1.0</version>
     <artifactId>webApp</artifactId>
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
     <name>Life In Order</name>
 
     <properties>
