--- a/webApp/src/main/resources/application.properties
+++ b/webApp/src/main/resources/application.properties
@@ -18,4 +18,7 @@ spring.datasource.url=jdbc:derby:./db/Financials;create=true
 spring.datasource.driver-class-name=org.apache.derby.jdbc.EmbeddedDriver
 spring.jpa.hibernate.ddl-auto=update
 
+logging.level.root=WARN
+spring.output.ansi.enabled=ALWAYS
+
 server.port=9999
