Use of mysql connection on application properties. Match versions of properties between distribution and production

--- a/webApp/src/main/resources/application.properties
+++ b/webApp/src/main/resources/application.properties
@@ -14,8 +14,10 @@ multipart.maxRequestSize = 500Mb
 # specifies the size threshold after which files will be written to disk. Default is 0, which means that the file will be written to disk immediately.
 multipart.fileSizeThreshold = 500Mb
 
-spring.datasource.url=jdbc:derby:./db/Financials;create=true
-spring.datasource.driver-class-name=org.apache.derby.jdbc.EmbeddedDriver
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+spring.datasource.url=jdbc:mysql://localhost:<port>/<nameOfDatabase>
+spring.datasource.username=username
+spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
 
 logging.level.root=WARN
