--- a/webApp/pom.xml
+++ b/webApp/pom.xml
@@ -119,15 +119,10 @@
             <version>2.1.3-1</version>
             <scope>runtime</scope>
         </dependency>
-        <!--<dependency>-->
-            <!--<groupId>com.github.wvengen</groupId>-->
-            <!--<artifactId>proguard-maven-plugin</artifactId>-->
-            <!--<version>2.0.11</version>-->
-        <!--</dependency>-->
         <dependency>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-war-plugin</artifactId>
-            <version>2.6</version>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.28</version>
         </dependency>
     </dependencies>
 
