--- a/webApp/pom.xml
+++ b/webApp/pom.xml
@@ -12,7 +12,7 @@
 
     <version>1.0</version>
     <artifactId>webApp</artifactId>
-    <packaging>jar</packaging>
+    <!--<packaging>jar</packaging>-->
     <name>Life In Order</name>
 
     <properties>
@@ -96,6 +96,11 @@
             <groupId>org.webjars.bower</groupId>
             <artifactId>angular-ui-grid</artifactId>
             <version>3.1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>ng-tags-input</artifactId>
+            <version>2.3.0</version>
         </dependency>
         <dependency>
             <groupId>org.webjars</groupId>
@@ -198,15 +203,15 @@
                             <!--</options>-->
                         <!--</configuration>-->
                     <!--</plugin>-->
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-war-plugin</artifactId>
-                        <version>2.6</version>
-                        <configuration>
-                            <warSourceDirectory>src/main/webapp</warSourceDirectory>
-                            <failOnMissingWebXml>false</failOnMissingWebXml>
-                        </configuration>
-                    </plugin>
+                    <!--<plugin>-->
+                        <!--<groupId>org.apache.maven.plugins</groupId>-->
+                        <!--<artifactId>maven-war-plugin</artifactId>-->
+                        <!--<version>2.6</version>-->
+                        <!--<configuration>-->
+                            <!--<warSourceDirectory>src/main/webapp</warSourceDirectory>-->
+                            <!--<failOnMissingWebXml>false</failOnMissingWebXml>-->
+                        <!--</configuration>-->
+                    <!--</plugin>-->
                 </plugins>
             </build>
 
