--- a/webApp/pom.xml
+++ b/webApp/pom.xml
@@ -105,9 +105,9 @@
             <scope>runtime</scope>
         </dependency>
         <dependency>
-            <groupId>org.webjars.bower</groupId>
-            <artifactId>angular-ui-grid</artifactId>
-            <version>3.1.1</version>
+            <groupId>org.webjars</groupId>
+            <artifactId>font-awesome</artifactId>
+            <version>4.6.3</version>
         </dependency>
         <dependency>
             <groupId>org.webjars</groupId>
