--- a/webApp/src/main/resources/application.properties
+++ b/webApp/src/main/resources/application.properties
@@ -17,12 +17,15 @@ multipart.maxRequestSize = 500Mb
 multipart.fileSizeThreshold = 500Mb
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
-spring.datasource.url=jdbc:mysql://localhost:<port>/<nameOfDatabase>
-spring.datasource.username=username
-spring.datasource.password=password
+spring.datasource.url=jdbc:mysql://localhost:3306/financialTests2
+spring.datasource.username=root
+spring.datasource.password=manos.01
 spring.jpa.hibernate.ddl-auto=update
 
-logging.level.root=WARN
+#spring.datasource.url=jdbc:derby:./db/LifeInOrderDB;create=true
+#spring.datasource.driver-class-name=org.apache.derby.jdbc.EmbeddedDriver
+
+#logging.level.root=WARN
 spring.output.ansi.enabled=ALWAYS
 
 server.port=9999
