--- a/webApp/src/main/resources/application.properties
+++ b/webApp/src/main/resources/application.properties
@@ -17,9 +17,9 @@ multipart.maxRequestSize = 500Mb
 multipart.fileSizeThreshold = 500Mb
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
-spring.datasource.url=jdbc:mysql://localhost:3306/financialTests2
-spring.datasource.username=root
-spring.datasource.password=manos.01
+-spring.datasource.url=jdbc:mysql://localhost:<port>/<nameOfDatabase>
+-spring.datasource.username=username
+-spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
 
 #spring.datasource.url=jdbc:derby:./db/LifeInOrderDB;create=true
